# tetris99s

./: .gitignore  README.md  mix.exs
apps/client/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
apps/client/src/: app.rs
apps/client/src/components/: grid.rs  mod.rs
apps/client/src/routes/: about.rs  home.rs  mod.rs  play.rs
apps/client/static/: index.html  styles.scss
apps/server/: README.md  mix.exs
apps/server/config/: config.exs  dev.exs  runtime.exs  test.exs
apps/server/lib/: tetris_web.ex
apps/server/lib/tetris/: tetris_game.ex
apps/server/lib/tetris/tetris_game/: coordinates.ex  tetrimino.ex
apps/server/lib/tetris_web/: endpoint.ex  router.ex
apps/server/lib/tetris_web/views/: error_helpers.ex
apps/server/test/tetris/tetris_game/: coordiantes_test.exs
lib/: coordinates.ex  tetris.ex
test/: tetris_test.exs
